--- a/TODO
+++ b/TODO
@@ -3,6 +3,9 @@ TODO und Ideen
 
 * PHP4-faehigen Code taggen und dann auf PHP5 umsteigen
 
+* Alle Klassen umbennen, um Verzeichnisstruktur bessser widerzuspiegeln und 
+	Namenskonflikte zu vermeiden. (PEAR-aehnlich)
+
 * Ausgabe cachen und Cache vorrangig verwenden
   http://www.php.net/outcontrol
 	Die Dateinamen sollten dabei direkt mit der aufrufenden URL
