Weiterleitungscode um aussagekraeftige Fehlermeldung erweitert.
git-svn-id: http://svn.assembla.com/svn/federleicht/trunk@24 3f4560be-fcb6-4516-b323-ae570ede3bb7

--- a/TODO
+++ b/TODO
@@ -44,3 +44,7 @@ TODO und Ideen
 
 * Alle Modulverzeichnisse direkt in das Verzeichnis app/ schieben.
   Gemeinsame Dateien werden dem "Modul" common zugeordnet.
+
+* HTML-Templates fuer Fehlermeldungen erstellen
+  Diese sollten innerhalb des fl/-Verzeichnisses sein.
+  ? fl/error/*.php
